@@ -1,3 +1,8 @@
+2012-11-01  Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/sugar/logical/or.h : implementing x | y where x and y are
+        Logical sugar expressions
+
 2012-10-31  JJ Allaire <jj@rstudio.org>
 
 	* R/Attributes.R: add cppFunction for inline-style definitions; 
